# algorithms-specialization-stanford

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  algorithms.code-workspace  codecov.yaml  dev_requirements.txt  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: python_code_checks.yml  python_workflow.yml  pythonci.yml  pythoncicd.yml
src/course1/: README.md
src/course1/week1/: README.md  karatsuba_multiplication.md
src/course1/week1/analysis_of_algorithms/: asymptotic_analysis_notes.md
src/course1/week1/asymptotic_analysis/: asymptotic_analysis_notes.md
src/course1/week1/karatsuba/: integer_multiplication.md  integer_multiplication_notes.md  karatsuba.py  karatsuba_multiplication_notes.md  test_karatsuba.py
src/course1/week1/merge_sort/: merge_sort.py  merge_sort_notes.md  merge_sort_test.py  notes.md  test_merge_sort.py
src/course1/week1/problem_1_5/: problem_1_5.py  test_problem_1_5.py
src/course1/week1/problems/: problem_1_5.py
src/course1/week2/: README.md  inversion_counter.py
src/course1/week2/inversion_counter/: algorithm_for_counting_investions.md  inversion_counter.py  inversions_assignment.py  test_inversion_counter.py
src/course1/week2/master_method/: master_method.md
src/course1/week2/strassens_matrix_multiplication/: strassens.md  strassens.py  test_strassens.py
src/course1/week3/: README.md
src/course1/week3/quicksort/: quicksort.py  quicksort_assignment.py  test_quicksort.py
src/course1/week4/: README.md
src/course2/: README.md
src/course2/week1/: README.md  graph_search_overview.md
src/course2/week2/: README.md  dijkstra.md  dijkstra.py  dijkstra_assignment.py  test_dijkstra.py
src/course2/week3/: README.md  binary_search_trees.md  data_structures.md  heaps.md
src/course2/week4/: README.md  bloom_filters.md  hash_tables.md  test_two_sum.py  two_sum.py
src/course3/: README.md
src/course3/week1/: README.md  applications.md  greedy_algorithms.md  scheduler.py
src/course3/week2/: README.md
src/course3/week3/: README.md
src/course3/week4/: README.md
(+71 files in other folders)
