[tool.poetry]
name = "algorithms-specialization-stanford"
version = "0.0.0"
description = "Stanford's Algorithms Specialization courses."
authors = ["Connor McCarthy <mccarthy.connor.james@gmail.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
ipython = "^7.19.0"
pytest = "^6.2.2"
numpy = "^1.20.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
mypy = "^0.800"
pytest = "^6.2.2"
pre-commit = "^2.10.0"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.2"
addopts = "--cov-report term-missing --cov=./"
